Added some folders and changed some pages

--- a/styles.css
+++ b/styles.css
@@ -166,12 +166,19 @@ footer img{
     gap: 10px;
     margin-top: 10px;
 }
+.gallerie-auteur {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    margin-top: 10px;
+}
 .gallerie img {
     width: 300px;
    
     border-radius: 5px;
     height: 200px;
 }
+
 svg { width: 80%; 
     height: auto; 
     cursor: pointer; 
