--- a/styles.css
+++ b/styles.css
@@ -140,10 +140,9 @@ footer img{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .box {
-    border: 1px solid #ccc;
     padding: 15px;
     border-radius: 10px;
-    background-color: lightgray;
+    background-color: rgb(246, 246, 250);
 }
 .box img{
     height: 300px;
@@ -251,7 +250,7 @@ svg { width: 80%;
         flex: 1;
         padding: 10px;
         border: none;
-        background: #f5f5f5;
+        background: rgb(246, 246, 250);
         font-size: 16px;
     }
     
@@ -261,7 +260,7 @@ svg { width: 80%;
         margin-top: 10px;
         padding: 10px;
         border: none;
-        background: #f5f5f5;
+        background: rgb(246, 246, 250);
         font-size: 16px;
     }
     
@@ -290,9 +289,6 @@ svg { width: 80%;
     padding: 2px;
     text-align: center;
 }  
-.Slides{
-    display:none;
-}
 main{
     padding: 20px;
 }
@@ -320,7 +316,7 @@ main .auteur{
 justify-content: space-between;
 padding: 10px;
 border-radius: 14px;
-background-color: lightgray;
+background-color: rgb(246, 246, 250);
 margin-top: 10px;
 margin-bottom: 10px;
 }
