Added Bila Tserkva and Pereyaslav

--- a/styles.css
+++ b/styles.css
@@ -228,7 +228,7 @@ svg { width: 80%;
       }
   
       .hover-container.hovered {
-        background-image: url('./images/SaulGoodman.gif');
+        background-image: url('./images/SaulGoodman.jpg');
       }
     
 .saul{
