Added Responsive design

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ header {
     justify-content: space-between;
     align-items: center;
     color: black;
-  
+  width: 100%;
     position: sticky;
   top: 0;
 }
@@ -71,6 +71,7 @@ display: flex;
 flex-direction: row;
 justify-content: space-between;
 padding: 10px;
+width: 100%;
 }
 footer a
 {
@@ -325,3 +326,27 @@ margin-bottom: 10px;
     width: 100%;
     border-radius: 12px;
 }
+@media only screen and (max-width: 900px) {
+    header{
+        margin: 0;
+    }
+    body {
+    display: block;
+    }
+    svg{
+        width: 150%;
+     margin: 0;
+        height: auto;
+    }
+    .auteur{
+        display: flex;
+        flex-direction: column;
+
+        max-width: 90%;
+    }
+    .auteur img{
+        max-width: 90%;
+        max-height: auto;;
+    }
+
+  }
