--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@
     font-weight: normal;
     font-style: normal;
 }
+body{
+    margin: 0;
+}
 html{
     font-family: 'e-ukraine';
     margin: 0;
@@ -161,8 +164,6 @@ footer img{
     height: 80px;
 }
 .gallerie {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     margin-top: 10px;
 }
@@ -329,6 +330,13 @@ margin-bottom: 10px;
 @media only screen and (max-width: 900px) {
     header{
         margin: 0;
+        width: 100%;
+    }
+    footer{
+          width: 100%;
+    }
+    header a{
+        max-width: 80%;
     }
     body {
     display: block;
@@ -346,7 +354,24 @@ margin-bottom: 10px;
     }
     .auteur img{
         max-width: 90%;
-        max-height: auto;;
+        height: auto;;
     }
+section {
+    display: flex;
+    flex-direction: column;
+}
+.ville{
+    display: flex;
+    flex-direction: column;
+}
+.ville .img {
+    max-width: 600px;
+    
+}
+.gallery{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 
+}
   }
